--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@eslint/js": "^9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.1",
     "@libsql/client": "^0.17.0",
+    "@lucide/svelte": "^0.564.0",
     "@sveltejs/adapter-vercel": "^6.3.1",
     "@sveltejs/kit": "^2.50.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^24",
     "better-auth": "^1.4.18",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "eslint": "^9.39.2",
@@ -38,7 +40,10 @@
     "prettier-plugin-tailwindcss": "^0.7.2",
     "svelte": "^5.49.2",
     "svelte-check": "^4.3.6",
+    "tailwind-merge": "^3.4.1",
+    "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
