--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/compat": "^2.0.2",
     "@eslint/js": "^9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.1",
+    "@internationalized/date": "^3.11.0",
     "@libsql/client": "^0.17.0",
     "@lucide/svelte": "^0.561.0",
     "@sveltejs/adapter-vercel": "^6.3.1",
@@ -28,6 +29,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^24",
     "better-auth": "^1.4.18",
+    "bits-ui": "^2.15.5",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
