--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
+    "string-ts": "^2.3.1",
     "svelte": "^5.49.2",
     "svelte-check": "^4.3.6",
     "tailwind-merge": "^3.4.1",
