--- a/package.json
+++ b/package.json
@@ -36,13 +36,17 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-svelte": "^3.14.0",
+    "formsnap": "^2.0.1",
     "globals": "^17.3.0",
+    "mode-watcher": "^1.1.0",
     "prettier": "^3.8.1",
     "prettier-plugin-svelte": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "string-ts": "^2.3.1",
     "svelte": "^5.49.2",
     "svelte-check": "^4.3.6",
+    "svelte-sonner": "^1.0.7",
+    "sveltekit-superforms": "^2.29.1",
     "tailwind-merge": "^3.4.1",
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.18",
@@ -50,6 +54,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
-    "vite-plugin-devtools-json": "^1.0.0"
+    "vite-plugin-devtools-json": "^1.0.0",
+    "zod": "^4.3.6"
   }
 }
