--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^24",
     "better-auth": "^1.4.18",
     "bits-ui": "^2.15.5",
+    "cheerio": "^1.2.0",
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
