--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bits-ui": "^2.15.5",
     "cheerio": "^1.2.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.1",
     "eslint": "^9.39.2",
