--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
-# Drizzle
-# Replace with your DB credentials!
+# Application
+ORIGIN="http://localhost:5173"
+
+# Database
 DATABASE_URL="libsql://db-name-user.turso.io"
-# A local DB can also be used in dev as well
-# DATABASE_URL="file:local.db"
+# Optional local dev override: file:./local.db
 DATABASE_AUTH_TOKEN=""
 
-ORIGIN=""
-
 # Better Auth
-# For production use 32 characters and generated with high entropy
-# https://www.better-auth.com/docs/installation
 BETTER_AUTH_SECRET=""
+
 # GitHub OAuth
-# https://www.better-auth.com/docs/authentication/github
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
