--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "auth:schema": "pnpm dlx @better-auth/cli generate --config src/lib/auth/server.ts --output src/lib/server/db/schema/auth.schema.ts --yes"
+    "auth:schema": "pnpm dlx @better-auth/cli generate --config ./src/lib/auth/server.ts --output ./src/lib/server/db/schema/auth.schema.ts --yes"
   },
   "devDependencies": {
     "@eslint/compat": "^2.0.2",
