--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@libsql/client": "^0.17.0",
     "@lucide/svelte": "^0.561.0",
     "@sveltejs/adapter-vercel": "^6.3.1",
+    "@sveltejs/enhanced-img": "^0.10.3",
     "@sveltejs/kit": "^2.50.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.4",
     "@tailwindcss/vite": "^4.1.18",
