--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "string-ts": "^2.3.1",
     "svelte": "^5.49.2",
     "svelte-check": "^4.3.6",
+    "svelte-meta-tags": "^4.5.0",
     "svelte-sonner": "^1.0.7",
     "sveltekit-superforms": "^2.29.1",
     "tailwind-merge": "^3.4.1",
